--- a/prueba.html
+++ b/prueba.html
@@ -25,8 +25,12 @@
             $("#prueba").contents().find("body").on('click', function(event) {
                 console.log("se dio clic en el iframe");
                 var userDataEntry={};
+                var model ={
+                    "prop1": " esta es la prop"+count,
+                    "prop2": "esta es la prop"+count
+                }
                 userDataEntry.id=count;
-                userDataEntry.name="name"+count;
+                userDataEntry.model= model;
                 array.push(userDataEntry);
                 count++;
                 if(count==5){
@@ -34,7 +38,7 @@
                 }
              });
         });
-        
+        //https://stackoverflow.com/questions/19641918/javascript-push-replaces-all-the-stored-values-with-the-values-of-last-objec
         function viewArray(){
             console.log(array);
         }
